RESOLVED FIXED12773
REGRESSION (r19490): Crash on ipx-server.de
https://bugs.webkit.org/show_bug.cgi?id=12773
Summary REGRESSION (r19490): Crash on ipx-server.de
Thomas Steinacher
Reported 2007-02-14 11:04:08 PST
1. Go to http://www.ipx-server.de/index.php?page=11-&con=0000000000 2. Click on the links at the left side (e.g. CPU/RAM) 3. Nightly WebKit (rev 19616) will crash.
Attachments
Crash log (18.20 KB, text/plain)
2007-02-14 11:04 PST, Thomas Steinacher
no flags
Patch, including change log and manual test (2.96 KB, patch)
2007-02-14 11:43 PST, mitz
sam: review+
Thomas Steinacher
Comment 1 2007-02-14 11:04:57 PST
Created attachment 13169 [details] Crash log
mitz
Comment 2 2007-02-14 11:43:28 PST
Created attachment 13173 [details] Patch, including change log and manual test
Sam Weinig
Comment 3 2007-02-14 14:55:11 PST
Comment on attachment 13173 [details] Patch, including change log and manual test r=me!
Mark Rowe (bdash)
Comment 4 2007-02-14 22:01:54 PST
Landed in r19637.
Note You need to log in before you can comment on or make changes to this bug.