third_party/WebKit/WebCore/rendering/RenderBox.cpp
@@ -428,7 +428,7 @@ static void cacluateBackgroundSize(const BackgroundLayer* bgLayer, int& scaledWi
 
 void RenderBox::imageChanged(CachedImage* image)
 {
-    if (!image || !image->canRender() || !parent())
+    if (!image || !image->canRender() || !parent() || !view())
         return;
 
     if (isInlineFlow() || style()->borderImage().image() == image) {
@@ -440,7 +440,7 @@ void RenderBox::imageChanged(CachedImage* image)
     IntRect absoluteRect;
     RenderBox* backgroundRenderer;
 
-    if (view() && (isBody() || isRoot())) {
+    if (isBody() || isRoot()) {
         // Our background propagates to the root.
         backgroundRenderer = view();
 
